kaarten verschijnen e.d., maar doen niks. Als eerste kijken naar een overlay laten verschijnen om een speler te selecteren van wie we een kaart willen zien. Sommige kaarten uitgezet zodat SeeOne kaarten eerder verschijnen bij het testen.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -401,6 +401,11 @@ html, body {
     border: 5px solid #EA6987;
 }
 
+.card-seeOne {
+    color: #DF6987;
+    border: 5px solid #EA6987;
+}
+
 .card-favor {
     color: #A9A097;
     border: 5px solid #A9A097;
