logic werkt waarschijnlijk

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -406,9 +406,14 @@ html, body {
     border: 5px solid #EA6987;
 }
 
-.card-seeOne {
+.card-seeThree {
     color: #6F6A81;
     border: 5px solid #2ED9A7;
+}
+
+.card-giveToLeft {
+    color: #CF6A81;
+    border: 5px solid #2BDAA1;
 }
 
 .card-favor {
