--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,9 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+		<a href="{{ site.github.zip_url }}" class="btn">Download Repository</a>
+        <a href="{{ site.github.zip_url }}" class="btn">Download Client</a>
+        <a href="{{ localhost:3000 }}" class="btn">Play Game</a>
       {% endif %}
     </section>
 
