--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       {% if site.show_downloads %}
 		<a href="{{ site.github.zip_url }}" class="btn">Download Repository</a>
         <a href="{{ site.github.zip_url }}" class="btn">Download Client</a>
-        <a href="{{ localhost:3000 }}" class="btn">Play Game</a>
+        <a href="{{ http://localhost:3000 }}" class="btn">Play Game</a>
       {% endif %}
     </section>
 
