--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
       {% endif %}
       {% if site.show_downloads %}
 		<a href="{{ site.github.zip_url }}" class="btn">Download Repository</a>
-        <a href="{{ site.github.zip_url }}" class="btn">Download Client</a>
+        <a href="./Final_Project.zip" class="btn">Download Java Model</a>
         <a href="https://mas-ek.herokuapp.com/" class="btn">Play Game</a>
       {% endif %}
     </section>
