master branch download ipv gh-pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-		<a href="{{ site.github.zip_url }}" class="btn">Download Repository</a>
+		<a href="https://github.com/Daemonstool/MAS/zipball/master" class="btn">Download master branch from Repository</a>
         <a href="./Final_Project.zip" class="btn">Download Java Model</a>
         <a href="https://mas-ek.herokuapp.com/" class="btn">Play Game</a>
       {% endif %}
