--- a/graphstyle.css
+++ b/graphstyle.css
@@ -3,6 +3,7 @@ graph{
 }
 
 node{
+    fill-mode: dyn-plain;
     text-background-color: #A9A9A9;
     text-background-mode: rounded-box;
     text-alignment: at-left;
